--- a/index.html
+++ b/index.html
@@ -66,10 +66,140 @@
 
 				<form class="form-inline my-2 my-lg-0">
 					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					<button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
 				</form>
+				<div class="mx-2">
+					<button class="btn btn-outline-danger" data-toggle="modal" data-target="#LoginModal">Login</button>
+					<button class="btn btn-outline-danger" data-toggle="modal" data-target="#SignupModal">
+						Sign-up
+					</button>
+				</div>
 			</div>
 		</nav>
+		\
+
+		<!-- Login Modal -->
+		<div
+			class="modal fade"
+			id="LoginModal"
+			tabindex="-1"
+			role="dialog"
+			aria-labelledby="LoginModalLabel"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="LoginModalLabel">Login to Youcoder</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<div class="modal-body">
+							<form>
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label>
+									<input
+										type="email"
+										class="form-control"
+										id="exampleInputEmail1"
+										aria-describedby="emailHelp"
+										placeholder="Enter email"
+									/>
+									<small id="emailHelp" class="form-text text-muted"
+										>We'll never share your email with anyone else.</small
+									>
+								</div>
+								<div class="form-group">
+									<label for="exampleInputPassword1">Password</label>
+									<input
+										type="password"
+										class="form-control"
+										id="exampleInputPassword1"
+										placeholder="Password"
+									/>
+								</div>
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input" id="exampleCheck1" />
+									<label class="form-check-label" for="exampleCheck1">Check me out</label>
+								</div>
+								<button type="submit" class="btn btn-primary">Submit</button>
+							</form>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- sign-up Modal -->
+		<div
+			class="modal fade"
+			id="SignupModal"
+			tabindex="-1"
+			role="dialog"
+			aria-labelledby="SignupModalLabel"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="SignupModalLabel">Create a account</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						
+							<form>
+								<div class="form-group">
+									<label for="exampleInputEmail1">Email address</label>
+									<input
+										type="email"
+										class="form-control"
+										id="exampleInputEmail1"
+										aria-describedby="emailHelp"
+										placeholder="Enter email"
+									/>
+									<small id="emailHelp" class="form-text text-muted"
+										>We'll never share your email with anyone else.</small
+									>
+								</div>
+								<div class="form-group">
+									<label for="exampleInputPassword1">Password</label>
+									<input
+										type="password"
+										class="form-control"
+										id="exampleInputPassword1"
+										placeholder="Password"
+									/>
+									<div class="form-group">
+										<label for="exampleInputPassword1">Confirm Password</label>
+										<input
+											type="cpassword"
+											class="form-control"
+											id="exampleInputPassword1"
+											placeholder="Password"
+										/>
+								</div>
+								<div class="form-check">
+									<input type="checkbox" class="form-check-input" id="exampleCheck1" />
+									<label class="form-check-label" for="exampleCheck1">Check me out</label>
+								</div>
+								<button type="submit" class="btn btn-primary">Create Account</button>
+							</form>
+						</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 		<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
