--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">YOurCoder</a>
+			<a class="navbar-brand" href="index.html">YOurCoder</a>
 			<button
 				class="navbar-toggler"
 				type="button"
@@ -32,7 +32,7 @@
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item ">
+					<li class="nav-item">
 						<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item ">
@@ -41,26 +41,7 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="/Contact.html">Contact</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdown"
-							role="button"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							Topics
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Technology</a>
-							<a class="dropdown-item" href="#">Web devlopment</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Support</a>
-							<a class="dropdown-item" href="#">Write for us</a>
-						</div>
-					</li>
+
 					<li class="nav-item"></li>
 				</ul>
 
