--- a/index.html
+++ b/index.html
@@ -70,13 +70,11 @@
 				</form>
 				<div class="mx-2">
 					<button class="btn btn-outline-danger" data-toggle="modal" data-target="#LoginModal">Login</button>
-					<button class="btn btn-outline-danger" data-toggle="modal" data-target="#SignupModal">
-						Sign-up
-					</button>
+					<button class="btn btn-outline-danger" data-toggle="modal" data-target="#SignupModal">Sign-up</button>
 				</div>
 			</div>
 		</nav>
-		\
+		
 
 		<!-- Login Modal -->
 		<div
@@ -210,7 +208,7 @@
 				<div class="carousel-item active">
 					<img
 						class="d-block w-100"
-						src="https://source.unsplash.com/1400x400/?code,coding"
+						src="photo-1529429612779-c8e40ef2f36d.jpg"
 						alt="First slide"
 					/>
 					<div class="carousel-caption d-none d-md-block">
@@ -224,7 +222,7 @@
 				<div class="carousel-item">
 					<img
 						class="d-block w-100"
-						src="https://source.unsplash.com/1400x400/?technology,code"
+						src="photo-1600267185296-f7dc4efe939c.jpg"
 						alt="Second slide"
 					/>
 					<div class="carousel-caption d-none d-md-block">
@@ -238,7 +236,7 @@
 				<div class="carousel-item">
 					<img
 						class="d-block w-100"
-						src="https://source.unsplash.com/1400x400/?coding, programming"
+						src="new.jpg"
 						alt="Third slide"
 					/>
 					<div class="carousel-caption d-none d-md-block">
@@ -270,14 +268,13 @@
 							<h3 class="mb-0">Read blog related to any coding topic</h3>
 							<div class="mb-1 text-muted">Anytime</div>
 							<p class="card-text mb-auto">
-								This is a wider card with supporting text below as a natural lead-in to additional
-								content.
+								Join us for more
 							</p>
 							<a href="#" class="stretched-link">Continue reading</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
 							<img
-								src="https://source.unsplash.com/500x700/?Success,Achivement"
+								src="card 4.jpg"
 								class="bd-placeholder-img"
 								width="200"
 								height="250"
@@ -294,14 +291,13 @@
 							<h3 class="mb-0">Anytime,Anywhere</h3>
 							<div class="mb-1 text-muted">Nov 11</div>
 							<p class="mb-auto">
-								This is a wider card with supporting text below as a natural lead-in to additional
-								content.
+								join us for more
 							</p>
 							<a href="#" class="stretched-link">Continue reading</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
 							<img
-								src="https://source.unsplash.com/500x700/?Achivement,coding"
+								src="card 1.jpg"
 								class="bd-placeholder-img"
 								width="200"
 								height="250"
@@ -319,17 +315,16 @@
 					>
 						<div class="col p-4 d-flex flex-column position-static">
 							<strong class="d-inline-block mb-2 text-primary">Learn from others</strong>
-							<h3 class="mb-0">Read blog related to any coding topic</h3>
+							<h3 class="mb-0">Read about new tech trends</h3>
 							<div class="mb-1 text-muted">Anytime</div>
 							<p class="card-text mb-auto">
-								This is a wider card with supporting text below as a natural lead-in to additional
-								content.
+								join us for more.
 							</p>
 							<a href="#" class="stretched-link">Continue reading</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
 							<img
-								src="https://source.unsplash.com/500x700/?Success,Achivement"
+								src="card 2.jpg"
 								class="bd-placeholder-img"
 								width="200"
 								height="250"
@@ -342,18 +337,17 @@
 						class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
 					>
 						<div class="col p-4 d-flex flex-column position-static">
-							<strong class="d-inline-block mb-2 text-success">Read Blogs about Web-Design</strong>
+							<strong class="d-inline-block mb-2 text-success">Read About New languges</strong>
 							<h3 class="mb-0">Anytime,Anywhere</h3>
-							<div class="mb-1 text-muted">Nov 11</div>
+							<div class="mb-1 text-muted">For free</div>
 							<p class="mb-auto">
-								This is a wider card with supporting text below as a natural lead-in to additional
-								content.
+								join us for more
 							</p>
 							<a href="#" class="stretched-link">Continue reading</a>
 						</div>
 						<div class="col-auto d-none d-lg-block">
 							<img
-								src="https://source.unsplash.com/500x700/?Achivement,coding"
+								src="card 3.jpg"
 								class="bd-placeholder-img"
 								width="200"
 								height="250"
